# urshort

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-container.yml  publish-crate.yml  rust-check.yml
assets/: error.html  index.html
src/: environment.rs  main.rs  uri_mappings.rs
