[package]
name = "urshort"
version = "0.1.0"
authors = ["Matthew Booe <mirdaki@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
regex = "1.5.4"
