[package]
name = "urshort"
version = "0.1.1"
authors = ["Matthew Booe <mirdaki@users.noreply.github.com>"]
description = "A blazingly fast and amazingly simple URL shortener designed for self-hosters."
edition = "2021"
license = "MIT"
homepage = "https://github.com/mirdaki/urshort"
repository = "https://github.com/mirdaki/urshort"
keywords = ["url-shortener", "server", "web"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5.16"
regex = "1.5.4"
dotenv = "0.15.0"
substring = "1.4.5"
